Исправление переменных в env

--- a/.env
+++ b/.env
@@ -1,15 +1,13 @@
 LABEL=sfr
-DEMET_PATH=.
 TIMEZONE=UTC
 
-### CONTAINER & PORT CONFIGURATIONS
+### Конфигурация контейнеров и портов
 
-
-# WEBSERVER CONFIGURATION
+# Конфигурация Веб-Сервера
 HOST_PORT_WEBSERVER=80
 HOST_PORT_WEBSERVER_SSL=443
 
-# MYSQL CONFIGURATION
+# Настройка MySQL+PHPmyAdmin
 MYSQL_VERSION=8.4
 HOST_PORT_MYSQL=3306
 MYSQL_DEFAULT_USER=root
